// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`k api > Snapshot tests > basic usage should match snapshot 1`] = `
"
.kuma-4229161508{font-size:24px;}

import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-4229161508\\"].join(\\" \\")
  });
}
"
`;

exports[`k api > Snapshot tests > using pseudo elements should match snapshot 1`] = `
"
.kuma-2631981251{padding:2px;}.kuma-2631981251:after{color:blue;}

import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-2631981251\\"].join(\\" \\")
  });
}
"
`;

exports[`k api > Snapshot tests > using pseudo props should match snapshot 1`] = `
"
.kuma-2131929892{padding:2px;}.kuma-2131929892:hover{color:red;}

import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"span\\", {
    className: [\\"kuma-2131929892\\"].join(\\" \\")
  });
}
"
`;

exports[`k api > Snapshot tests > using responsive props should match snapshot 1`] = `
"
.kuma-401969115{font-size:16px;}@media (min-width:576px){.kuma-401969115{font-size:24px;}}

import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"a\\", {
    className: [\\"kuma-401969115\\"].join(\\" \\")
  });
}
"
`;

exports[`k api > Snapshot tests > using space props should match snapshot 1`] = `
"
.kuma-3206633536{padding:2px;}

import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-3206633536\\"].join(\\" \\")
  });
}
"
`;
